# SlicerDebuggingTools

./: CMakeLists.txt  CTestConfig.cmake  README.md
NodeInfo/: NodeInfo.py
NodeModifiedStatistics/: NodeModifiedStatistics.py
PyDevRemoteDebug/: CMakeLists.txt  PyDevRemoteDebug.py
PyDevRemoteDebug/Resources/Icons/: PyDevRemoteDebug.xcf
PyDevRemoteDebug/ptvsd-3.0.0/ptvsd/: __init__.py  __main__.py  attach_server.py  visualstudio_py_debugger.py  visualstudio_py_launcher.py  visualstudio_py_repl.py  visualstudio_py_util.py
PyDevRemoteDebug/ptvsd-4.1.3/ptvsd/: __main__.py  _local.py  _remote.py  _util.py  _version.py  attach_server.py  daemon.py  exit_handlers.py  futures.py  pathutils.py  pydevd_hooks.py  socket.py  wrapper.py
PyDevRemoteDebug/ptvsd-4.1.3/ptvsd/_vendored/: force_pydevd.py
PyDevRemoteDebug/ptvsd-4.1.3/ptvsd/_vendored/pydevd/: pydevconsole.py  pydevd.py  pydevd_file_utils.py  pydevd_tracing.py  setup_cython.py
PyDevRemoteDebug/ptvsd-4.1.3/ptvsd/_vendored/pydevd/_pydev_bundle/: _pydev_completer.py  pydev_console_utils.py  pydev_monkey.py  pydev_monkey_qt.py
PyDevRemoteDebug/ptvsd-4.1.3/ptvsd/_vendored/pydevd/_pydev_runfiles/: pydev_runfiles_xml_rpc.py
SlicerDebuggingTools-master/SlicerDebuggingTools-master/: CMakeLists.txt  DebuggingTools.xcf  LICENSE
SlicerDebuggingTools-master/SlicerDebuggingTools-master/NodeInfo/: CMakeLists.txt  NodeInfo.py
SlicerDebuggingTools-master/SlicerDebuggingTools-master/NodeModifiedStatistics/: CMakeLists.txt
SlicerDebuggingTools-master/SlicerDebuggingTools-master/PyDevRemoteDebug/: CMakeLists.txt  PyDevRemoteDebug.py
(+26 files in other folders)
